# monster-stop-backend

./: Cargo.toml
migrations/: 20241209062214_create_drinks_table.sql
src/: db.rs  handlers.rs  main.rs  models.rs  routes.rs
