[package]
name = "monster-stop-backend"
version = "0.1.0"
edition = "2024"


[dependencies]
actix-web = "4"
env_logger = "0.11"
sqlx = { version = "0.8.2", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "uuid",
    "json",
    "chrono",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
uuid = { version = "1", features = ["serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
actix-rt = "2"
chrono = { version = "0.4", features = ["serde"] }
actix-cors = "0.7"
